--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Boilerplate of Hux Blog"
+description: "Learning And Coding"
 ---
 
 {% for post in paginator.posts %}
